# TAGE

./: .gitignore  README.md  gen_test_file.py  pyproject.toml  run_eval.sh
tage/: __init__.py  __main__.py  eval.py
tage/audio/: __init__.py  stft.py  tools.py
tage/metrics/: clap_score.py  factory.py  fad.py  fid.py  isc.py  kid.py  kl.py  lpaps.py  ndb.py
tage/modules/: clap.py  melception_audioset.py
tage/modules/panns/: models.py
